Added correctlyPredicts, cleaned some old code